fixed image stretching

--- a/src/App.css
+++ b/src/App.css
@@ -41,17 +41,20 @@ body,
   height: 50px;
 }
 
+
 .background {
+  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
   width: 100vw;
-  position: absolute; /* Make sure image fills the container */
+   /* Make sure image fills the container */
   top: 0;
   left: 0;
   z-index: 1;
   transform: scale(1.05);
+  object-fit: cover;
 }
 
 .text {
